--- a/app/src/main/res/layout/lab4.xml
+++ b/app/src/main/res/layout/lab4.xml
@@ -31,7 +31,7 @@
             android:text="SEND" />
 
         <EditText
-            android:id="@id/editText1"
+            android:id="@+id/editText1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
