--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -62,6 +62,11 @@
        android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Go to chat" />
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to toolbar" />
 
 
 </LinearLayout>
