--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,5 +68,11 @@
         android:layout_height="wrap_content"
         android:text="Go to toolbar" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to WeatherForecast" />
+
 
 </LinearLayout>
