--- a/app/src/main/res/layout/listview_item_receive.xml
+++ b/app/src/main/res/layout/listview_item_receive.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/receive" />
 
-    <EditText
+    <TextView
         android:id="@+id/edit"
         android:layout_weight="1"
         android:layout_width="match_parent"
