--- a/app/src/main/res/layout/listview_item_send.xml
+++ b/app/src/main/res/layout/listview_item_send.xml
@@ -8,7 +8,7 @@
     android:padding="20dp"
     >
 
-    <EditText
+    <TextView
         android:id="@+id/edit"
         android:layout_weight="1"
         android:layout_width="match_parent"
